Modified to make a Kata

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,43 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="canonical" href="https://css-speedrun.netlify.app/">
+  <meta http-equiv="X-UA-Compatible"
+    content="IE=edge">
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0">
+  <link rel="canonical"
+    href="https://css-speedrun.netlify.app/">
   <title>CSS Speedrun | Test your CSS Skills</title>
-  <meta name="description" content="A small fun app to test your CSS knowledge. Find the correct CSS selectors for the 10 puzzles as fast as possible.">
-  <meta property="og:title" content="CSS Speedrun | Test your CSS Skills">
-  <meta property="og:image" content="https://css-speedrun.netlify.app/assets/css-speedrun.png">
-  <meta property="og:site_name" content="CSS Speedrun | Test your CSS Skills">
-  <meta property="og:description" content="A small fun app to test your CSS knowledge. Find the correct CSS selectors for the 10 puzzles as fast as possible.">
-  <meta property="og:url" content="https://css-speedrun.netlify.app/">
+  <meta name="description"
+    content="A small fun app to test your CSS knowledge. Find the correct CSS selectors for the 10 puzzles as fast as possible.">
+  <meta property="og:title"
+    content="CSS Speedrun | Test your CSS Skills">
+  <meta property="og:image"
+    content="https://css-speedrun.netlify.app/assets/css-speedrun.png">
+  <meta property="og:site_name"
+    content="CSS Speedrun | Test your CSS Skills">
+  <meta property="og:description"
+    content="A small fun app to test your CSS knowledge. Find the correct CSS selectors for the 10 puzzles as fast as possible.">
+  <meta property="og:url"
+    content="https://css-speedrun.netlify.app/">
 
-  <meta name="twitter:creator" content="@wweb_dev" />
-  <meta name="twitter:title" content="CSS Speedrun | Test your CSS Skills">
-  <meta name="twitter:description" content="A small fun app to test your CSS knowledge. Find the correct CSS selectors for the 10 puzzles as fast as possible.">
-  <meta name="twitter:image" content="https://css-speedrun.netlify.app/assets/css-speedrun.png">
-  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:creator"
+    content="@wweb_dev" />
+  <meta name="twitter:title"
+    content="CSS Speedrun | Test your CSS Skills">
+  <meta name="twitter:description"
+    content="A small fun app to test your CSS knowledge. Find the correct CSS selectors for the 10 puzzles as fast as possible.">
+  <meta name="twitter:image"
+    content="https://css-speedrun.netlify.app/assets/css-speedrun.png">
+  <meta name="twitter:card"
+    content="summary_large_image">
 
-  <meta name="robots" content="index,follow"><!-- All Search Engines -->
-  <meta name="googlebot" content="index,follow"><!-- Google Specific -->
+  <meta name="robots"
+    content="index,follow"><!-- All Search Engines -->
+  <meta name="googlebot"
+    content="index,follow"><!-- Google Specific -->
 
-  <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg">
-  <link rel="icon" type="image/png" href="/assets/favicon.png">
-  <link rel="stylesheet" href="https://fonts.xz.style/serve/inter.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css">
-  <link rel="stylesheet" href="https://newcss.net/theme/night.css">
-  <link href="https://fonts.googleapis.com/css2?family=ZCOOL+KuaiLe&display=swap" rel="stylesheet">
-  <link href="/assets/prism.css" rel="stylesheet" />
+  <link rel="icon"
+    type="image/svg+xml"
+    href="/assets/favicon.svg">
+  <link rel="icon"
+    type="image/png"
+    href="/assets/favicon.png">
+  <link rel="stylesheet"
+    href="https://fonts.xz.style/serve/inter.css">
+  <link rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css">
+  <link rel="stylesheet"
+    href="https://newcss.net/theme/night.css">
+  <link
+    href="https://fonts.googleapis.com/css2?family=ZCOOL+KuaiLe&display=swap"
+    rel="stylesheet">
+  <link href="/assets/prism.css"
+    rel="stylesheet" />
   <!-- Quick start with https://newcss.net/ -->
-  <link rel="stylesheet" href="index.css">
-  <script async defer data-website-id="dbc780b9-eaf4-4ffb-bae8-0a39a828b9d7" src="https://analytics.vincentwill.com/umami.js"></script>
+  <link rel="stylesheet"
+    href="index.css">
+  <script async
+    defer
+    data-website-id="dbc780b9-eaf4-4ffb-bae8-0a39a828b9d7"
+    src="https://analytics.vincentwill.com/umami.js"></script>
 </head>
+
 <body>
   <header>
     <a href="/">
       <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--mdi" width="32" height="32" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2m-8 5H9v2c0 1.1-.9 2-2 2c1.1 0 2 .9 2 2v2h2v2H9c-1.1 0-2-.9-2-2v-1c0-1.1-.9-2-2-2v-2c1.1 0 2-.9 2-2V8c0-1.1.9-2 2-2h2v2m8 5c-1.1 0-2 .9-2 2v1c0 1.1-.9 2-2 2h-2v-2h2v-2c0-1.1.9-2 2-2c-1.1 0-2-.9-2-2V8h-2V6h2c1.1 0 2 .9 2 2v1c0 1.1.9 2 2 2v2z" fill="currentColor"></path></svg>
-      <h1>CSS Speedrun</h1>
+      <h1>CSS Speedrun - CCA version</h1>
     </a>
     <div>
       <div class="social">
@@ -52,20 +84,27 @@
   <main>
     <details>
       <summary>How does it work?</summary>
-      <p>Enter the CSS selector, which applies to all elements with an arrow ➡️ and press enter or the submit button.</p>
+      <p>Enter the CSS selector, which applies to all elements with an arrow ➡️
+        and press enter or the submit button.</p>
       <p>The timer will start once you correctly solved the first puzzle.</p>
     </details>
 
     <section>
-      <div class="left-column" id="code-screen">
-        <blockquote class="hidden" id="result-screen">
+      <div class="left-column"
+        id="code-screen">
+        <blockquote class="hidden"
+          id="result-screen">
           <h3>Congratulations!</h3>
 
           <p>You've managed to solve all puzzles 🎉🎉🎉</p>
           <p>
             Feel free to checkout
-            the <a target="_blank" rel="noopener" href="https://github.com/Vincenius/css-speedrun">GitHub Repository</a> and
-            create your own puzzles. Please let me know on <a target="_blank" rel="noopener" href="https://twitter.com/wweb_dev">Twitter</a> if
+            the
+            <a target="_blank" rel="noopener" href="https://github.com/Vincenius/css-speedrun">GitHub Repository</a>
+            and
+            create your own puzzles. Please let me know on
+            <a target="_blank" rel="noopener" href="https://twitter.com/wweb_dev">Twitter</a>
+            if
             you do so :)
           </p>
           <a target="_blank" rel="noopener" href="" id="share-tweet">
@@ -74,10 +113,17 @@
           </a>
         </blockquote>
 
-        <input id="css-input" placeholder="Enter CSS selector eg. div > .foo"  autocorrect="off" autocomplete="off" autocapitalize="off" spellcheck="false" />
+        <input id="css-input"
+          placeholder="Enter CSS selector eg. div > .foo"
+          autocorrect="off"
+          autocomplete="off"
+          autocapitalize="off"
+          spellcheck="false" />
         <button id="submit">-></button>
-        <p id="next-level" class="hidden">Press enter or the submit button to continue</p>
-        <p id="solution" class="hidden">
+        <p id="next-level"
+          class="hidden">Press enter or the submit button to continue</p>
+        <p id="solution"
+          class="hidden">
           devs choice:
           <code id="solution-code"></code>
         </p>
@@ -89,8 +135,21 @@
         <div id="tooltip">
           Testy
         </div>
-        <span id="hint1" class="">
-          <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--mdi" width="32" height="32" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path d="M11 18h2v-2h-2v2m1-12a4 4 0 0 0-4 4h2a2 2 0 0 1 2-2a2 2 0 0 1 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5a4 4 0 0 0-4-4M5 3h14a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2z" fill="currentColor"></path></svg>
+        <span id="hint1"
+          class="">
+          <svg xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+            aria-hidden="true"
+            role="img"
+            class="iconify iconify--mdi"
+            width="32"
+            height="32"
+            preserveAspectRatio="xMidYMid meet"
+            viewBox="0 0 24 24">
+            <path
+              d="M11 18h2v-2h-2v2m1-12a4 4 0 0 0-4 4h2a2 2 0 0 1 2-2a2 2 0 0 1 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5a4 4 0 0 0-4-4M5 3h14a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2z"
+              fill="currentColor"></path>
+          </svg>
           Hint 1
         </span>
         <a id="hint2" target="_blank" rel="noopener" class="">
@@ -100,18 +159,20 @@
       </div>
 
       <div class="right-column">
-        <code id="timer" data-before="">00:00:0</code>
+        <code id="timer"
+          data-before="">00:00:0</code>
         <blockquote>
           <ul id="levels">
             <!-- levels are added dynamically -->
           </ul>
-      </blockquote>
+        </blockquote>
       </div>
     </section>
   </main>
 
   <footer>
-    <span>Made with 🦄 by <a target="_blank" rel="noopener" href="https://twitter.com/wweb_dev">@wweb_dev</a></span>
+    <span>Made with 🦄 by
+      <a target="_blank" rel="noopener" href="https://twitter.com/wweb_dev">@wweb_dev</a></span>
 
     <div class="footer-right">
       <a target="_blank" rel="noopener" href="https://wweb.dev/">wweb.dev</a>
@@ -119,10 +180,12 @@
     </div>
   </footer>
 
-  <div id="verification" class="hidden">
+  <div id="verification"
+    class="hidden">
 
   </div>
 
   <script src="bundle.js"></script>
 </body>
+
 </html>
