--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -3,6 +3,9 @@ header {
   align-items: center;
   justify-content: space-between;
 
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+
   > a {
     display: flex;
     align-items: center;
