--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1,7 +1,7 @@
 body {
   position: relative;
   min-height: 100vh;
-  padding-bottom: 100px;
+  padding-bottom: 0px;
 }
 
 .hidden {
@@ -122,6 +122,7 @@ main section {
     position: relative;
     display: flex;
     align-items: center;
+    margin-top: 6px;
 
     &::before {
       content: url('data:image/svg+xml;charset=UTF-8, <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--mdi" width="20" height="20" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path d="M19 3H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2m0 2v14H5V5h14z" fill="white"></path></svg>');
